--- a/src/app.css
+++ b/src/app.css
@@ -32,9 +32,8 @@ body {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
   width: 100%;
 }
